--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "antd": "^4.23.6",
+    "classnames": "^2.3.2",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "easymde": "^2.18.0",
     "marked": "^4.1.1",
+    "marked-react": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
