--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "classnames": "^2.3.2",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
+    "dompurify": "^2.4.0",
     "easymde": "^2.18.0",
+    "isomorphic-dompurify": "^0.23.0",
     "marked": "^4.1.1",
     "marked-react": "^1.3.1",
     "react": "^18.2.0",
